Revert "fix: editorWrap css fixed for mobile view"
This reverts commit e47ce85a66a9947235c98811fbc1dd0985dd51be.

--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,8 @@ footer a{
 }
 
 .mainWrap {
-  /* display: grid;
-  grid-template-columns: 230px 1fr; */
-  display: flex;
+  display: grid;
+  grid-template-columns: 230px 1fr;
 }
 
 .aside{
